--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,15 @@
   }
 }
 
+@layer utilities {
+  .title {
+    @apply relative uppercase italic;
+  }
+  .title::after {
+    @apply absolute left-3 top-3 text-xl font-bold uppercase italic text-black opacity-15 blur-[1px] content-[attr(data-name)];
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
