--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,40 @@
   }
 }
 
-@layer utilities {
+@layer components {
+  /* custom heading */
   .title {
     @apply relative uppercase italic;
   }
   .title::after {
-    @apply absolute left-3 top-3 w-full text-xl font-medium uppercase italic text-black opacity-15 blur-[1px] content-[attr(data-name)];
+    @apply absolute left-3 top-3 w-[max-content] text-xl font-medium uppercase italic text-black opacity-20 blur-[1px] content-[attr(data-name)];
+  }
+
+  /* clip path for category card */
+  .clipped {
+    clip-path: polygon(
+      10% 0%,
+      96% 0%,
+      100% 7%,
+      100% 85%,
+      90% 100%,
+      6% 100%,
+      0% 91%,
+      0% 15%
+    );
+  }
+
+  .reverse-clipped {
+    clip-path: polygon(
+      4% 0%,
+      90% 0%,
+      100% 15%,
+      100% 91%,
+      95% 100%,
+      10% 100%,
+      0% 85%,
+      0% 7%
+    );
   }
 }
 
@@ -22,8 +50,4 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-.clipped {
-  clip-path: polygon(10% 0%, 100% 0%, 100% 85%, 90% 100%, 0% 100%, 0% 15%);
 }
