--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,113 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/* button */
+
+:root {
+  /*CUSTOMIZE ROOT*/
+  --background-color-inner: #212121;
+  --border-color-inner: rgba(255, 255, 255, 0.5);
+  --input-color: #fff;
+  --bg-right-background-color: #00d4ff;
+  --btn-gradient-color: linear-gradient(
+    115deg,
+    #7fa98a,
+    #daba3d,
+    #a767e5,
+    #12bcfe,
+    #44ce7b
+  );
+}
+
+.block-cube {
+  position: relative;
+}
+.block-cube .bg-top {
+  position: absolute;
+  height: 10px;
+  background: #020024;
+  background: var(--btn-gradient-color);
+  bottom: 100%;
+  left: 5px;
+  right: -5px;
+  transform: skew(-45deg, 0);
+  margin: 0;
+}
+.block-cube .bg-top .bg-inner {
+  bottom: 0;
+}
+.block-cube .bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: var(--btn-gradient-color);
+}
+.block-cube .bg-right {
+  position: absolute;
+  background: #020024;
+  background: var(--bg-right-background-color);
+  top: -5px;
+  z-index: 0;
+  bottom: 5px;
+  width: 10px;
+  left: 100%;
+  transform: skew(0, -45deg);
+}
+.block-cube .bg-right .bg-inner {
+  left: 0;
+  bottom: 4px;
+}
+.block-cube .bg .bg-inner {
+  transition: all 0.2s ease-in-out;
+}
+.block-cube .bg-inner {
+  background: var(--background-color-inner);
+  position: absolute;
+  left: 2.5px;
+  top: 2px;
+  right: 2px;
+  bottom: 2px;
+}
+.block-cube .text {
+  position: relative;
+  z-index: 2;
+}
+.block-cube.block-input input {
+  position: relative;
+  z-index: 2;
+}
+.block-cube.block-input input:focus ~ .bg-right .bg-inner,
+.block-cube.block-input input:focus ~ .bg-top .bg-inner,
+.block-cube.block-input input:focus ~ .bg-inner .bg-inner {
+  top: 100%;
+  /*FLASH COLOR FILL FOCUS - NOT IMPORTANT*/
+  background: var(--border-color-inner);
+}
+.block-cube.block-input .bg-top,
+.block-cube.block-input .bg-right,
+.block-cube.block-input .bg {
+  /*BORDER COLOR AND COLOR FILL FOCUS*/
+  background: var(--border-color-inner);
+  transition: background 0.2s ease-in-out;
+}
+.block-cube.block-input .bg-right .bg-inner,
+.block-cube.block-input .bg-top .bg-inner {
+  transition: all 0.2s ease-in-out;
+}
+.block-cube.block-input:focus .bg-top,
+.block-cube.block-input:focus .bg-right,
+.block-cube.block-input:focus .bg,
+.block-cube.block-input:hover .bg-top,
+.block-cube.block-input:hover .bg-right,
+.block-cube.block-input:hover .bg {
+  /*HOVER BORDER COLOR*/
+  background: var(--border-color-inner);
+  opacity: 0.8;
+}
+.block-cube.block-cube-hover:focus .bg .bg-inner,
+.block-cube.block-cube-hover:hover .bg .bg-inner {
+  top: 100%;
+}
