--- a/src/index.css
+++ b/src/index.css
@@ -52,12 +52,11 @@
   box-sizing: border-box;
 }
 
-/* button */
-
+/* cube input & button */
 :root {
   /*CUSTOMIZE ROOT*/
   --background-color-inner: #212121;
-  --border-color-inner: rgba(255, 255, 255, 0.5);
+  --border-color-inner: rgba(53, 53, 53, 0.5);
   --input-color: #fff;
   --bg-right-background-color: #00d4ff;
   --btn-gradient-color: linear-gradient(
@@ -76,7 +75,6 @@
 .block-cube .bg-top {
   position: absolute;
   height: 10px;
-  background: #020024;
   background: var(--btn-gradient-color);
   bottom: 100%;
   left: 5px;
@@ -97,7 +95,6 @@
 }
 .block-cube .bg-right {
   position: absolute;
-  background: #020024;
   background: var(--bg-right-background-color);
   top: -5px;
   z-index: 0;
@@ -133,13 +130,13 @@
 .block-cube.block-input input:focus ~ .bg-top .bg-inner,
 .block-cube.block-input input:focus ~ .bg-inner .bg-inner {
   top: 100%;
-  /*FLASH COLOR FILL FOCUS - NOT IMPORTANT*/
+  /* fill color on bg top when clicked */
   background: var(--border-color-inner);
 }
 .block-cube.block-input .bg-top,
 .block-cube.block-input .bg-right,
 .block-cube.block-input .bg {
-  /*BORDER COLOR AND COLOR FILL FOCUS*/
+  /* default cube border color */
   background: var(--border-color-inner);
   transition: background 0.2s ease-in-out;
 }
@@ -153,9 +150,10 @@
 .block-cube.block-input:hover .bg-top,
 .block-cube.block-input:hover .bg-right,
 .block-cube.block-input:hover .bg {
-  /*HOVER BORDER COLOR*/
+  /* when hover */
   background: var(--border-color-inner);
-  opacity: 0.8;
+  transition: all 0.2s ease-in-out;
+  opacity: 0.9;
 }
 .block-cube.block-cube-hover:focus .bg .bg-inner,
 .block-cube.block-cube-hover:hover .bg .bg-inner {
