chore: ui modified

--- a/src/index.css
+++ b/src/index.css
@@ -82,10 +82,10 @@ html.dark {
   --bg-right-background-color: #00d4ff;
   --btn-gradient-color: linear-gradient(
     90deg,
-    hsl(223deg 68% 6%) 0%,
+    hsl(0, 0%, 18%) 0%,
     hsl(263, 94%, 37%) 33%,
     hsl(267deg 96% 65%) 67%,
-    hsl(270deg 27% 94%) 100%
+    hsl(0, 0%, 79%) 100%
   );
   --bg-right-background-color: #ddd;
 }
